// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Task Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="task status-active"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "gap": "2rem",
          "justifyContent": "flex-start",
        }
      }
    >
      <button
        aria-label="Delete task"
        className="button color-base is-round"
        id="Delete task"
      >
        <span
          className="icon color-base size-sm"
        >
          <svg
            height={22}
            stroke="currentColor"
            viewBox="0 0 22 22"
            width={22}
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
              transform="translate(1 1)"
            >
              <circle
                cx="10"
                cy="10"
                r="10"
                strokeWidth="2.5"
              />
            </g>
          </svg>
        </span>
        
        
      </button>
      <h3
        className="title color-base"
      >
        Consent doubt Tuckborough challenge destroying. active
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Task Status 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="task status-first"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "gap": "2rem",
          "justifyContent": "flex-start",
        }
      }
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          height={21}
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
          >
            <path
              d="M7 5h2v2H7zM12 5h2v2h-2zM7 9h2v2H7zM12 9h2v2h-2zM7 13h2v2H7zM12 13h2v2h-2z"
            />
          </g>
        </svg>
      </span>
      <h3
        className="title color-base"
      >
        Consent doubt Tuckborough challenge destroying. first
      </h3>
    </div>
    <button
      aria-label="Delete task"
      className="button color-base is-round"
      id="Delete task"
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          height={21}
          stroke="currentColor"
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            strokeLinecap="round"
            strokeLinejoin="round"
          >
            <path
              d="M5.5 4.5h10v12a2 2 0 01-2 2h-6a2 2 0 01-2-2zm5-2a2 2 0 011.995 1.85l.005.15h-4a2 2 0 012-2zM3.5 4.5h14M8.5 7.5v8M12.5 7.5v8"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
  </div>
  <div
    className="task status-second"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "gap": "2rem",
          "justifyContent": "flex-start",
        }
      }
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          height={21}
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
          >
            <path
              d="M7 5h2v2H7zM12 5h2v2h-2zM7 9h2v2H7zM12 9h2v2h-2zM7 13h2v2H7zM12 13h2v2h-2z"
            />
          </g>
        </svg>
      </span>
      <h3
        className="title color-base"
      >
        Consent doubt Tuckborough challenge destroying. second
      </h3>
    </div>
    <button
      aria-label="Delete task"
      className="button color-base is-round"
      id="Delete task"
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          height={21}
          stroke="currentColor"
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            strokeLinecap="round"
            strokeLinejoin="round"
          >
            <path
              d="M5.5 4.5h10v12a2 2 0 01-2 2h-6a2 2 0 01-2-2zm5-2a2 2 0 011.995 1.85l.005.15h-4a2 2 0 012-2zM3.5 4.5h14M8.5 7.5v8M12.5 7.5v8"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
  </div>
  <div
    className="task status-pending"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "gap": "2rem",
          "justifyContent": "flex-start",
        }
      }
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          height={21}
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="currentColor"
            fillRule="evenodd"
          >
            <path
              d="M7 5h2v2H7zM12 5h2v2h-2zM7 9h2v2H7zM12 9h2v2h-2zM7 13h2v2H7zM12 13h2v2h-2z"
            />
          </g>
        </svg>
      </span>
      <h3
        className="title color-base"
      >
        Consent doubt Tuckborough challenge destroying. pending
      </h3>
    </div>
    <button
      aria-label="Delete task"
      className="button color-base is-round"
      id="Delete task"
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          height={21}
          stroke="currentColor"
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            strokeLinecap="round"
            strokeLinejoin="round"
          >
            <path
              d="M5.5 4.5h10v12a2 2 0 01-2 2h-6a2 2 0 01-2-2zm5-2a2 2 0 011.995 1.85l.005.15h-4a2 2 0 012-2zM3.5 4.5h14M8.5 7.5v8M12.5 7.5v8"
            />
          </g>
        </svg>
      </span>
      
      
    </button>
  </div>
  <div
    className="task status-culminated"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "gap": "2rem",
          "justifyContent": "flex-start",
        }
      }
    >
      <span
        className="icon color-base size-sm"
      >
        <svg
          height={21}
          stroke="currentColor"
          viewBox="0 0 21 21"
          width={21}
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          >
            <path
              d="M14.857 3.79a8 8 0 102.852 3.24M6.5 9.5l3 3 8-8"
            />
          </g>
        </svg>
      </span>
      <h3
        className="title color-base"
      >
        Consent doubt Tuckborough challenge destroying. culminated
      </h3>
    </div>
  </div>
  <div
    className="task status-active"
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "gap": "2rem",
          "justifyContent": "flex-start",
        }
      }
    >
      <button
        aria-label="Delete task"
        className="button color-base is-round"
        id="Delete task"
      >
        <span
          className="icon color-base size-sm"
        >
          <svg
            height={22}
            stroke="currentColor"
            viewBox="0 0 22 22"
            width={22}
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              fill="none"
              fillRule="evenodd"
              transform="translate(1 1)"
            >
              <circle
                cx="10"
                cy="10"
                r="10"
                strokeWidth="2.5"
              />
            </g>
          </svg>
        </span>
        
        
      </button>
      <h3
        className="title color-base"
      >
        Consent doubt Tuckborough challenge destroying. active
      </h3>
    </div>
  </div>
</div>
`;
